--- a/project/yazhou-pc/src/css/module/chatroom.scss
+++ b/project/yazhou-pc/src/css/module/chatroom.scss
@@ -1,19 +1,7 @@
-$chatroom-icon-1: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/chatroom01.svg);
-$chatroom-icon-2: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/emoji01.svg);
-$chatroom-icon-3: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/emoji02.svg);
-$chatroom-icon-4: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/send01.svg);
-$chatroom-icon-5: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/send02.svg);
-$chatroom-icon-6: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/unmute_info.svg);
-$chatroom-icon-7: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/mute_info.svg);
-$chatroom-icon-8: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/show_order01.svg);
-$chatroom-icon-9: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/show_order02.svg);
-$chatroom-icon-10: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/statistics01.svg);
-$chatroom-icon-11: url(/2023-08-06-15-57-30/image/yabo/svg/like_order01_y0.svg);
-$chatroom-icon-12: url(/2023-08-06-15-57-30/image/yabo/svg/like_order_day.svg);
-$chatroom-icon-13: url(/2023-08-06-15-57-30/image/yabo/png/notify_y0.png);
-$chatroom-icon-14: url(/2023-08-06-15-57-30/image/yabo/theme01_y0/img/svg/ask-icon.svg);
-$chatroom-bg-image1: url(/2023-08-06-15-57-30/common/png/select_blue.png);
-
+$chat-text-orange-1: #FF7100;
+$chat-text-blue-1: #556BEC;
+$chat-bg-orange-1: #FF7100;
+$chat-bg-blue-1: #556BEC;
 $chatroom-text-color-1: #4276fb;
 $chatroom-text-color-2: #fc2222;
 $chatroom-bd-color-1: #dce0e5;
