--- a/project/yazhou-pc/src/css/module/analysis.scss
+++ b/project/yazhou-pc/src/css/module/analysis.scss
@@ -1,40 +1,2 @@
 
-$analysis-bg-color-1: #fff;
-$analysis-bg-color-2: #d0d8de;
-$analysis-bg-color-3: #e7eaee;
-$analysis-bg-color-5: #f8f9fa;
-$analysis-bg-color-6: #afb3bb;
-$analysis-bg-color-7: #e03c00;
-$analysis-bg-color-8: #ef7700;
-$analysis-bg-color-9: #ff9323;
-$analysis-bg-color-12: #ff7000;
-$analysis-bg-color-13: #546bec;
-$analysis-bg-color-14: #f7f8f9;
-$analysis-bg-color-16: #e4ebf1;
-$analysis-text-color-1: #2d2d2d;
-$analysis-text-color-2: #666;
-$analysis-text-color-3: #5b6175;
-$analysis-text-color-4: #000;
-$analysis-text-color-5: #5a6074;
-$analysis-text-color-6: #ff7373;
-$analysis-text-color-7: #71c866;
-$analysis-text-color-8: #5ab6f7;
-$analysis-text-color-9: #afb3bb;
-$analysis-text-color-10: #333;
-$analysis-text-color-11: #B6B9C6;
-$analysis-text-color-12: #83838a;
-$analysis-text-color-13: #fff;
-$analysis-text-color-14: #999;
-$analysis-bd-color-1: #e7eaee;
-$analysis-bd-color-2: #d0d8de;
-$analysis-bd-color-3: #fff;
-$analysis-bd-color-4: #dce0e5;
-$analysis-bg-color-4: #569ffd;
-$analysis-bg-color-10: #e7eaee;
-$analysis-bg-color-11: rgba(86, 159, 253, 0.2);
-$analysis-bg-color-15: #2cb2ff;
-$analysis-text-color-15: #e7eaee;
-
-$analysis-bg-gradient-2: linear-gradient(-40deg, #3d72fa 0%, #62b3ff 100%);
-$analysis-bg-gradient-1: linear-gradient(180deg, #fff 21%, #f0f3f7 100%);
-$analysis-bg-gradient-4: linear-gradient(180deg, #FFFFFF 21%, #F0F3F7 100%), linear-gradient(180deg, #FFFFFF 21%, #F0F3F7 100%);
+$analysis-bg-color: #fff;
