--- a/project/yazhou-pc/src/css/quasar-variables.scss
+++ b/project/yazhou-pc/src/css/quasar-variables.scss
@@ -1,25 +1,16 @@
-@import url(./module/index.scss);
 @import url(./module/activity.scss);
 @import url(./module/analysis.scss);
-@import url(./module/bet.scss);
-@import url(./module/bg-color.scss);
-@import url(./module/bg-img.scss);
-@import url(./module/border-color.scss);
-@import url(./module/chat.scss);
+@import url(./module/animate.scss);
+@import url(./module/background.scss);
+@import url(./module/border.scss);
 @import url(./module/chatroom.scss);
-@import url(./module/color.scss);
+@import url(./module/form.scss);
+@import url(./module/index.scss);
 @import url(./module/match.scss);
-@import url(./module/menu.scss);
-@import url(./module/popup.scss);
-@import url(./module/re-bg.scss);
-@import url(./module/theme.scss);
-@import url(./module/user.scss);
-@import url(./module/video.scss);
-@import url(./module/vr.scss);
-@import url(./module/vs.scss);
-@import url(./module/wrap.scss);
-@import url(./module/y0.scss);
-@import url(./module/yb.scss);
+@import url(./module/media.scss);
+@import url(./module/text-color.scss);
+
+
 
 $primary   : #1976D2;
 $secondary : #26A69A;
