--- a/entries/development-document/src/styles/common.scss
+++ b/entries/development-document/src/styles/common.scss
@@ -1,11 +1,23 @@
-.badge-right {
-    position: absolute;
-    right: -30px;
-    background-color: var(--q-primary);
-    color: #fff;
-    border-radius: 4px;
-    padding: 2px 6px;
-    line-height: 12px;
-    min-height: 12px;
-    font-weight: normal;
-}
+// ::-webkit-scrollbar {
+//     height: 12px;
+//     width: 14px;
+//     background: transparent;
+//     z-index: 12;
+//     overflow: visible;
+// }
+
+
+
+// ::-webkit-scrollbar-thumb {
+//     width: 10px;
+//     background-color: #00b4ff;
+//     border-radius: 10px;
+//     z-index: 12;
+//     border: 4px solid rgba(0,0,0,0);
+//     background-clip: padding-box;
+//     -webkit-transition: background-color .28s ease-in-out;
+//     transition: background-color .28s ease-in-out;
+//     margin: 4px;
+//     min-height: 32px;
+//     min-width: 32px;
+// }
