--- a/project/yazhou-pc/src/css/quasar-variables.scss
+++ b/project/yazhou-pc/src/css/quasar-variables.scss
@@ -10,16 +10,21 @@
 @import url(./module/media.scss);
 @import url(./module/text-color.scss);
 
+$layout_max_width:1920px;//内容最大宽度
+$layout_min_width:1400px;//内容最大宽度
 
+$layout_menu_width: 234px; //左侧菜单宽度
+$layout_menu_width_mini: 64px; //左侧菜单mini宽度
+$layout_right_width: 441px; //右侧宽度
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: #1976d2;
+$secondary: #26a69a;
+$accent: #9c27b0;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark: #1d1d1d;
+$dark-page: #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #21ba45;
+$negative: #c10015;
+$info: #31ccec;
+$warning: #f2c037;
