api引入 css加入头部变量

--- a/project/yazhou-pc/src/css/quasar-variables.scss
+++ b/project/yazhou-pc/src/css/quasar-variables.scss
@@ -17,6 +17,9 @@ $layout_menu_width: 234px; //左侧菜单宽度
 $layout_menu_width_mini: 64px; //左侧菜单mini宽度
 $layout_right_width: 441px; //右侧宽度
 
+$layout_nav_height: 60px;//导航高度
+$layout_notice_height:36px; //公告高度
+
 $primary: #1976d2;
 $secondary: #26a69a;
 $accent: #9c27b0;
