--- a/project/yazhou-h5/src/css/quasar-variables.scss
+++ b/project/yazhou-h5/src/css/quasar-variables.scss
@@ -10,3 +10,8 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+// 详情页玩法集背景颜色
+$details-tab-bg-color: #ffffff;
+// 详情页玩法模板背景颜色
+$details-odds-bg-color: #F7F9FE;
