--- a/project/yazhou-h5/src/css/quasar-variables.scss
+++ b/project/yazhou-h5/src/css/quasar-variables.scss
@@ -15,3 +15,5 @@ $warning   : #F2C037;
 $details-tab-bg-color: #ffffff;
 // 详情页玩法模板背景颜色
 $details-odds-bg-color: #F7F9FE;
+// 详情页顶部区域字体颜色
+$details-header-team-name: #ffffff;
