投注项组件 迁移1

--- a/project/yazhou-pc/src/css/quasar-variables.scss
+++ b/project/yazhou-pc/src/css/quasar-variables.scss
@@ -1,14 +1,14 @@
-@import url(./global/activity.scss);
-@import url(./global/analysis.scss);
-@import url(./global/animate.scss);
-@import url(./global/background.scss);
-@import url(./global/border.scss);
-@import url(./global/chatroom.scss);
-@import url(./global/form.scss);
-@import url(./global/index.scss);
-@import url(./global/match.scss);
-@import url(./global/media.scss);
-@import url(./global/text-color.scss);
+// @import url(./global/activity.scss);
+// @import url(./global/analysis.scss);
+// @import url(./global/animate.scss);
+// @import url(./global/background.scss);
+// @import url(./global/border.scss);
+// @import url(./global/chatroom.scss);
+// @import url(./global/form.scss);
+// @import url(./global/index.scss);
+// @import url(./global/match.scss);
+// @import url(./global/media.scss);
+// @import url(./global/text-color.scss);
 
 
 $layout_max_width: 1920px; //内容最大宽度
