--- a/project/yazhou-pc/src/components/site-header/site-header.scss
+++ b/project/yazhou-pc/src/components/site-header/site-header.scss
@@ -23,6 +23,7 @@
         position: absolute;
         top: 10px;
         right: 0;
+        background-color: var(--q--site-header-bg-color2);
     }
 }
 
@@ -84,6 +85,8 @@
 
 .c-site-header {
     height: 96px;
+    background: var(--qq--site-header-bg-color1);
+    color: var(--qq--site-header-text-color1);
 
     .tip-content {
         position: absolute;
@@ -101,6 +104,9 @@
         }
 
         .yb-icon-triangle {
+            &::before {
+                background-color: var(--qq--site-header-text-color2);
+              }
             position: absolute;
             width: 16px;
             height: 8px;
@@ -142,6 +148,9 @@
                 height: 100%;
                 width: 100%;
                 padding: 0 0px 0 16px;
+                color: var(--qq--site-header-text-color4);
+                background-image: var(--qq--site-header-search-border-color1);
+                border: 1px solid var(--qq--site-header-border-color1);
 
                 &.mini-normal,
                 &.normal {
@@ -262,6 +271,12 @@
                         text-transform: uppercase;
                         position: relative;
                         z-index: 100;
+                        color: var(--qq--site-header-text-color3);
+                        letter-spacing:.5px;
+                        &.active {
+                            font-weight: 600;
+                            color: var(--qq--site-header-text-active-color1);
+                          }
                     }
 
                     .activity_center {
@@ -346,17 +361,43 @@
             left: 0;
             height: 36px;
             justify-content: space-between;
+            border-top: 1px solid var(--qq--site-header-border-color2);
+            border-bottom: 1px solid var(--qq--ite-header-border-color2);
+            background: var(--qq--site-header-bg-color3);
+            /* 公告 */
+            .marquee-wrap {          
+                .iframe-tab-wrapper {
+                .tab-item {
+                    background-image: var(--qq--site-header-bg-color4);
+                }
+                }
+                .label {
+                    opacity: 0.96;
+                    background-image: var(--qq--site-header-bg-color5);
+                    border: 0.5px solid var(--qq--site-header-border-color3);
+                    border-radius: 11px;
+                    font-weight: 400;
+                }
+            }
 
             .col-right {
                 padding: 0 10px;
                 display: flex;
                 justify-content: flex-end;
                 height: 100%;
+                .show-date {
+                    color: var(--qq--site-header-text-color5);
+                }
 
                 .popup-wrap {
                     margin-right: 16px;
                     height: 100%;
                     z-index: 302;
+                    &.active {
+                        .yb-icon-arrow {
+                            transform: rotate(270deg);
+                        }
+                    }
 
                     .text-wrap {
                         display: flex;
@@ -367,16 +408,16 @@
 
                     .popup-text {
                         margin-right: 8px;
+                        &.active {
+                            color: var(--qq--site-header-text-active-color2);
+                        }
                     }
 
                     .yb-icon-arrow {
                         transition: transform 0.3s;
                         transform: rotate(90deg);
-                    }
-
-                    &.active {
-                        .yb-icon-arrow {
-                            transform: rotate(270deg);
+                        &:before {
+                            color: #A5AEC8;
                         }
                     }
 
@@ -385,10 +426,24 @@
                         top: 7px;
                         text-align: center;
                         border-radius: 4px;
+                        background: var(--qq--ite-header-bg-color6);
+                        box-shadow: var(--qq--site-header-box-shadow1);
+                        .item {
+                            &:hover {
+                              background: var(--qq--site-header-bg-color7);
+                            }
+                            &.active {
+                              color: var(--qq--site-header-text-active-color2);
+                            }
+                        }
 
                         .select-item {
+                            background: var(--qq--site-header-bg-color8);
                             .item {
                                 padding: 0 5px;
+                                &.active {
+                                    background: var(--qq--site-header-bg-color9);
+                                  }
                             }
                         }
                     }
@@ -401,6 +456,29 @@
                         position: absolute;
                         transform: rotate(45deg);
                         top: -2px;
+                        background: var(--qq--site-header-text-color5);
+                    }
+                }
+                .versions-zhuanye {
+                    .wrap-language {
+                        background: var(--qq--site-header-bg-color10);
+                        box-shadow: var(--qq--site-header-box-shadow1);
+                        .item {
+                            &:hover {
+                                background: var(--qq--site-header-bg-color9);
+                            }
+                            &.active {
+                                color: var(--qq--site-header-text-active-color2);
+                            }
+                      }
+                      &:before {
+                            border: 4px solid transparent;
+                            border-bottom: 4px solid #A5AEC8;
+                      }
+                      &:after {
+                            border: 6px solid transparent;
+                            border-bottom: 6px solid #A5AEC8;
+                        }
                     }
                 }
             }
@@ -547,6 +625,27 @@
             }
         }
     }
+
+    /*  用户信息 */
+    .user-info {
+        color: var(--qq--site-header-text-color6);
+        .balance-btn-eye:before {
+          color: var(--qq--site-header-text-color7);
+        }
+        .balance-text-show {
+          color: var(--qq--site-header-text-color8);
+        }
+        .icon-refresh:before {
+          color: var(--qq--site-header-text-color9);
+        }
+        .icon-balance_refresh {
+          background-image: var(--qq--site-header-bg-img1);
+          background-position: center;
+          &:hover {
+            background-image: var(--qq--site-header-bg-img2);
+          }
+        }
+      }
 }
 
 .c-site-header.is-iframe {
