--- a/project/yazhou-h5/src/pages/details/styles/details.scss
+++ b/project/yazhou-h5/src/pages/details/styles/details.scss
@@ -53,7 +53,7 @@
 }
 .details-tab-wrap {
   // background-color:  var(--q-color-page-bg-color-103);
-  background-color: $details-tab-bg-color;
+  // background-color: $details-tab-bg-color;
   position: sticky;
   top: 0.44rem;
   z-index: 81;
