--- a/project/yazhou-h5/src/pages/details/styles/header-top.scss
+++ b/project/yazhou-h5/src/pages/details/styles/header-top.scss
@@ -32,7 +32,7 @@
     margin-bottom: 0.1rem;
     font-family: dinMedium;
     font-size: 0.16rem;
-    color: $details-header-team-name;
+    // color: $details-header-team-name;
   }
   .information-score {
     display: flex;
@@ -43,7 +43,7 @@
     > span {
       font-family: dinMedium;
       font-size: 0.36rem;
-      color: $details-header-team-name;
+      // color: $details-header-team-name;
 
       &.line-Bar {
         margin: 0 0.1rem;
@@ -68,13 +68,13 @@
       font-family: dinMedium;
       text-align: center;
       margin-bottom: 0.05rem;
-      color: $details-header-team-name;
+      // color: $details-header-team-name;
     }
 
     .sj-time-soon {
       font-family: dinMedium;
       font-size: 0.26rem;
-      color: $details-header-team-name;
+      // color: $details-header-team-name;
       letter-spacing: 0;
       text-align: center;
       font-weight: 500;
@@ -96,7 +96,7 @@
 
 .score-style {
   font-size: 0.26rem;
-  color: $details-header-team-name;
+  // color: $details-header-team-name;
   letter-spacing: 0;
   text-align: center;
   font-weight: 500;
@@ -108,7 +108,7 @@
 
 .team-name {
   font-size: 0.14rem;
-  color: $details-header-team-name;
+  // color: $details-header-team-name;
   height: 0.5rem;
   padding: 0 0.2rem;
   justify-content: space-between;
