H5 赛事列表联调

--- a/project/yazhou-h5/src/pages/match-list/styles/index.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/index.scss
@@ -36,7 +36,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
-    padding-top: 0.67rem; // 减去0.4 因为顶部加了div
+    // padding-top: 0.67rem; // 减去0.4 因为顶部加了div
     padding-bottom: 1.02rem;
     /*border-top: 0.01rem solid transparent;*/
 
