--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
@@ -1,7 +1,7 @@
 .line-up {
 
     padding-bottom: 0.2rem;
-  
+    
     > .header {
       display: flex;
       justify-content: center;
@@ -58,7 +58,9 @@
     .football_field {
       width: 100%;
       height: 3.45rem;
-      background:  var(--q-color-com-img-bg-91) no-repeat center;
+      // TODO: var(--q-color-com-img-bg-91)
+      background:  url("public/image/png/football_squad_background.png") no-repeat center;
+      // background-image: url("public/image/png/football_squad_background.png");
       background-size: 100% 100%;
       margin-bottom: 0.15rem;
       display: flex;
