H5 赛事列表 css 样式联调

--- a/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
+++ b/project/yazhou-h5/src/pages/match-list/styles/match-container.scss
@@ -320,6 +320,8 @@
     justify-content: space-between;
     align-items: center;
     height: 0.4rem;
+    background: var(--q-color-page-bg-color-96);
+    border-color: var(--q-color-border-color-5);
 
     &.show-sport {
       border-radius: 0.12rem 0.12rem 0 0;
