--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
@@ -1,12 +1,12 @@
 .line-up {
 
     padding-bottom: 0.2rem;
-    
+    background: var(--q-analysis-matches-color-30);
     > .header {
       display: flex;
       justify-content: center;
       padding: 0.15rem 0;
-  
+      background: var(--q-analysis-matches-color-42);
       position: sticky;
       top: 1.21rem;
       width: 100%;
@@ -19,7 +19,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-  
+        border: 1px solid var(--q-analysis-matches-color-26);
   
         letter-spacing: 0;
         text-align: center;
@@ -27,16 +27,16 @@
         font-size: 0.14rem;
   
         .ellipsis {
-  
+          color: var(--q-analysis-matches-color-1);
           font-weight: unset;
         }
   
         &.active {
-  
+          background: var(--q-analysis-matches-color-43);
           border: unset;
   
           .ellipsis {
-  
+            color:  var(--q-analysis-matches-color-4);
             font-weight: bold;
           }
         }
@@ -142,7 +142,9 @@
         > div {
           width: 0.36rem;
           height: 0.36rem;
-  
+          background: var(--q-analysis-matches-color-33) !important;
+          border: 1px solid  var(--q-analysis-matches-color-4);
+          border-radius: 50%;
   
           display: flex;
           align-items: center;
@@ -151,7 +153,7 @@
           > span {
   
             font-size: 0.2rem;
-            color: var(--q-color-com-fs-color-8);
+            color: var(--q-analysis-matches-color-4);
             text-align: center;
           }
         }
@@ -159,7 +161,7 @@
         > span {
   
           font-size: 0.12rem;
-          color: var(--q-color-com-fs-color-8);
+          color: var(--q-analysis-matches-color-4);
           margin-top: 0.02rem;
         }
       }
@@ -182,7 +184,7 @@
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         font-size: 0.26667rem;
-        color: var(--q-color-com-bg-color-12);
+        color: var(--q-analysis-matches-color-4);
         text-align: center;
         max-width: unset;
         margin: unset;
@@ -276,17 +278,19 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          background: var(--q-analysis-matches-color-33) !important;
+          border: 1px solid  var(--q-analysis-matches-color-4);
   
           > span {
   
             font-size: 0.2rem;
-            color: var(--q-color-com-bg-color-12);
+            color: var(--q-analysis-matches-color-4);
             text-align: center;
           }
         }
   
         > .ellipsis {
-          color: var(--q-color-com-bg-color-12);
+          color: var(--q-analysis-matches-color-4);
           font-weight: bold;
         }
       }
@@ -296,9 +300,9 @@
       height: 0.4rem;
       line-height: 0.4rem;
       padding-left: 0.24rem;
-  
+      color: var(--q-analysis-matches-color-9);
       font-size: 0.14rem;
-  
+      background-color:var(--q-analysis-matches-color-4);
       letter-spacing: 0;
   
       font-weight: bold;
@@ -311,7 +315,7 @@
         position: absolute;
         left: 0.16rem;
         top: 0.14rem;
-  
+        background:var(--q-analysis-matches-color-45);
         border-radius: 1.5px;
       }
     }
@@ -319,7 +323,7 @@
     .public_form {
       position: relative;
       margin-bottom: 0.1rem;
-  
+      background-color:var(--q-analysis-matches-color-4);
       /*  头部 */
       .header {
         height: 0.3rem;
@@ -327,9 +331,12 @@
         text-align: center;
         line-height: 0.32rem;
         padding: 0 0.1rem;
-  
+        background-color: var(--q-analysis-matches-color-4);
+        color:  var(--q-analysis-matches-color-10);
+        border-bottom: 1px solid  var(--q-analysis-matches-color-31);
+        border-top: 1px solid var(--q-analysis-matches-color-31);
         > div {
-  
+          color: var(--q-analysis-matches-color-2);
           font-size: 0.1rem;
         }
       }
@@ -341,9 +348,9 @@
         font-size: 0.13rem;
         height: 0.48rem;
         text-align: center;
-  
+        border-bottom: 1px solid  var(--q-analysis-matches-color-29);
         &:nth-child(odd) {
-  
+          background:  var(--q-analysis-matches-color-36);
         }
   
         div {
@@ -351,6 +358,7 @@
           align-items: center;
           justify-content: center;
           font-size: 0.12rem;
+          color: var(--q-analysis-matches-color-41) !important;
         }
       }
   
