--- a/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
+++ b/project/yazhou-h5/src/pages/details/analysis-matches/styles/line-up.scss
@@ -215,7 +215,7 @@
     .basket-ball-field {
       width: 100%;
       height: 3.75rem;
-      background:  var(--q-color-com-img-bg-90) no-repeat center;
+      background:  url("public/image/png/basketball_squad_background.png") no-repeat center;
       background-size: 100% 100%;
       margin-bottom: 0.15rem;
       display: flex;
