--- a/project/yazhou-pc/src/pages/match-results/index.scss
+++ b/project/yazhou-pc/src/pages/match-results/index.scss
@@ -119,7 +119,7 @@
       justify-content: space-between;
       align-items: center;
       height: 30px;
-      color: #ffffff;
+      color: #000;
     }
   }
 
